--- a/o meni.html
+++ b/o meni.html
@@ -105,11 +105,12 @@
 	<p>Moje ime je Sara Grubišić. Dolazim iz Splita, ali sam se zbog fakulteta preselila u Zagreb. Upisala sam Grafički fakultet i završila sam Umjetničku školu u Splitu. Kao što sam već napomenula na početnoj stranici, u slobodno vrijeme se bavim manikurom. Počela sam raditi nokte prije dvije godine. Vježbala sam na sebi i prijateljicama sve dok nisam usvršila svoj rad. U slobodno vrijeme također sviram klavir, kojeg sam prestala svirati prije pet godina, pa sam krenula iz početka. <br>
 	Osim mojih hobija, volim gledati filmove i serije. </p>
 	<p><a href="https://www.youtube.com/watch?v=E7GHnhwMJ28&list=LL&index=2">Valse - Evgeny Grinko</a></p>
-	<img/ src="../Projektni_zadatak_3/noktii.png">
-	<img/ src="../Projektni_zadatak_3/klavir.jpg">
-	<img/ src="../Projektni_zadatak_3/cmbyn.jpg">
+	<img/ src="noktii.png">
+	<img/ src="klavir.jpg">
+	<img/ src="cmbyn.jpg">
 	
 
 	
 </body>
 </html>
+
