--- a/vjezba.html
+++ b/vjezba.html
@@ -105,24 +105,25 @@
 <body>
 	<h1>Neki od mojih radova u ovom semestru</h1>
 	<h2>Prvi projektni zadatak</h2>
-	<img/ src="../Projektni_zadatak_3/prvi pz.png">
+	<img src="prvi pz.png">
 	
 	<h2>Drugi projektni zadatak</h2>
-	<img/ src="../Projektni_zadatak_3/drugi pz.png">
+	<img src="drugi pz.png">
 	
 	<h2>Moj font - 1. vježba</h2>
-	<img/ src="../grf/DM/vj1/Sara G moj font.jpg">
+	<img src="Sara G moj font.jpg">
 	
 	<h2>Vektorska grafika - 3. vježba</h2>
-	<img/ src="../Projektni_zadatak_3/vj3.png">
+	<img src="vj3.png">
 	
 	<h2>Vektorska grafika - 4. vježba</h2>
-	<img/ src="../Projektni_zadatak_3/vj4.png">
+	<img src="vj4.png">
 	
 	<h2>Koloriranje - 6. vježba</h2>
-	<img/ src="../grf/DM/vj6/zad_2_1.jpg">
+	<img src="zad_2_1.jpg">
 	
 	
 	
 </body>
 </html>
+
