--- a/vjezba.html
+++ b/vjezba.html
@@ -105,7 +105,7 @@
 <body>
 	<h1>Neki od mojih radova u ovom semestru</h1>
 	<h2>Prvi projektni zadatak</h2>
-	<img src="prvi pz.png">
+	<img src="https://github.com/saragrubisic-collab/projektni_sara/blob/main/prvi%20pz.png?raw=true">
 	
 	<h2>Drugi projektni zadatak</h2>
 	<img src="drugi pz.png">
@@ -126,4 +126,5 @@
 	
 </body>
 </html>
+
 
