--- a/vjezba.html
+++ b/vjezba.html
@@ -111,7 +111,7 @@
 	<img src="drugi pz.png">
 	
 	<h2>Moj font - 1. vježba</h2>
-	<img src="Sara G moj font.jpg">
+	<img src="https://github.com/saragrubisic-collab/projektni_sara/blob/main/Sara%20G%20moj%20font.jpg?raw=true">
 	
 	<h2>Vektorska grafika - 3. vježba</h2>
 	<img src="vj3.png">
@@ -126,5 +126,6 @@
 	
 </body>
 </html>
+
 
 
