--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             font-family: 'Roboto', sans-serif;
             margin: 0;
             padding: 0;
-            background-image: url("../Projektni_zadatak_3/pozadina.png");
+            background-image: url("https://github.com/saragrubisic-collab/projektni_sara/blob/main/pozadina.png?raw=true");
             background-size: cover;
             background-attachment: fixed;
             color: #333;
@@ -113,3 +113,4 @@
 	
 </body>
 </html>
+
